[tool.poetry]
name = "pidng"
version = "4.0.2"
description = "Python utility for converting Raspberry Pi Camera RAW images into Adobe DNG Format."
build = "build.py"
homepage = "https://github.com/itsthejoker/PiDNG"
authors = ["Csaba Nagy", "Volker Jaenisch", "Joe Kaufeld"]

[tool.poetry.dependencies]
python = ">=3.7,<3.11"
numpy = "^1.21.2"
ExifRead = "^2.3.2"
addict = "^2.4.0"

[tool.poetry.dev-dependencies]
black = "^21.8b0"

[build-system]
requires = ["setuptools", "poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
